.history/securitygroups_20190804160233.yaml
Description: 'AWS CloudFormation Sample Template LAMP_Single_Instance: Create a LAMP
  stack using a single EC2 instance and a local MySQL database for storage. This template
  demonstrates using the AWS CloudFormation bootstrap scripts to install the packages
  and files necessary to deploy the Apache web server, PHP and MySQL at instance launch
  time. **WARNING** This template creates an Amazon EC2 instance. You will be billed
  for the AWS resources used if you create a stack from this template.'
Parameters:
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x

Resources:
  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Enable SSH access via port 22
      GroupName: TCP SecurityGroup CF
      Tags: 
        -
          Key: "SecurityGroupType"
          Value: "TCP"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22

  ServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Allow connections from specified CIDR ranges
      GroupName: HTTP SecurityGroup CF
      Tags: 
        -
          Key: "SecurityGroupType"
          Value: "HTTP"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          ToPort: 80
          IpProtocol: tcp
